# CTemplate

./: .gitignore  CMakeLists.txt  README.md  build.sh  variables.md
include/: structs.h
include/parser/: parser_cli.h
include/utils/: debug.h  misc.h
src/: main.c
src/parser/: parse_cli.c
src/utils/: debug.c  misc.c
